--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,28 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title:   The Bizkid Music
+author:  Darius Brown
+email:   bizkid@musician.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Official website for The Bizkid
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url:     "" # the base hostname & protocol for your site, e.g. http://example.com
+
+instagram:     https://instagram.com/sleepyheadbrown/
+instagram-biz: https://instagram.com/thebizkid/
+github:        https://github.com/dariustb/
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+include: ['_pages']
+kramdown:
+  input: GFM
+
+# Include additional collections
+collections:
+  discog:
+    output: true
+    permalink: /:collection/:title
 
 # Exclude from processing.
 # The following items will not be processed, by default.
